--- a/cs-task-3-master/appsettings.json
+++ b/cs-task-3-master/appsettings.json
@@ -10,5 +10,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DeafaultSQLConnection": "Server= localhost; Database= Darko; Integrated Security=True;Encrypt=False;"
+  }
 }
