--- a/cs-task-3-master/Csharp Task 3.csproj
+++ b/cs-task-3-master/Csharp Task 3.csproj
@@ -8,6 +8,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="SQL\CrossJoin.sql" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="SQL\CrossJoin.sql" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.0" />
